<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollViewHome"
    tools:context=".mainpage.ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/cardViewImage1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_image_rice" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/descriptionPlant"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardViewImage1"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:backgroundTint="@color/green"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:id="@+id/descriptionPlantText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:text="@string/deskripsi_tanaman"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/pestAndDisease"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardViewImage1"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="@color/green"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:id="@+id/pestAndDiseaseText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:text="@string/hama_penyakit"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/weatherText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/cardViewDescription"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cardViewWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherText"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/cardViewWeather"
            app:layout_constraintBottom_toBottomOf="@id/cardViewWeather"
            app:layout_constraintStart_toStartOf="@id/cardViewWeather"
            app:layout_constraintEnd_toEndOf="@id/cardViewWeather"/>

        <TextView
            android:id="@+id/knowTheDiseaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewWeather"
            android:text="@string/know_the_disease"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewKnowTheDisease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@id/knowTheDiseaseText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"/>

                <ImageView
                    android:id="@+id/iconCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_camera"
                    android:layout_below="@id/step"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/openCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_camera"
                    android:layout_below="@id/iconCamera"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="18dp"/>

                <ImageView
                    android:id="@+id/iconTakePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/step"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_take_picture" />

                <TextView
                    android:id="@+id/takePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iconTakePicture"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="9dp"
                    android:text="@string/take_picture"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/icDiagnosa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_diagnosa"
                    android:layout_below="@id/step"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/icDiagnosa"
                    android:layout_alignParentEnd="true"
                    android:text="@string/result"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="9dp"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/buttonTakePicture"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/takePicture"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button"
                    android:text="@string/btn_take_picture"
                    android:textAlignment="center" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>