<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainpage.ui.feedback.FeedbackFragment">

    <ImageView
        android:id="@+id/imageFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_feedback"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/imageFeedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/yourFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:text="@string/your_feedback"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextFeedback"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/write_feedback"
                android:textSize="14sp"
                android:padding="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_above="@id/buttonSubmitFeedback"
                android:background="@drawable/edit_text_feedback"
                android:layout_below="@id/yourFeedback"/>
            
            <Button
                android:id="@+id/buttonSubmitFeedback"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/submit_feedback"
                android:textAlignment="center"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>