<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainpage.ui.diagnosis.DiagnosisPestDisease">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:background="@null"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/diagnosa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Diagnosa"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/closeButton"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/typeDisease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textSize="14sp"
            android:background="@drawable/edit_text_border"
            app:layout_constraintTop_toBottomOf="@id/diagnosa"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Virus"/>

        <TextView
            android:id="@+id/nameOfDisease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:textStyle="bold"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeDisease"
            tools:text="Kerdil Hampa"/>

        <View
            android:id="@+id/dividerLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/nameOfDisease"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dividerLine"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:cardCornerRadius="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/symptom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom"
                    android:textStyle="bold"
                    android:textSize="22sp"/>

                <TextView
                    android:id="@+id/symptomDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_below="@id/symptom"
                    android:textSize="18sp"
                    tools:text="&#8226; Luka pada tepi daun yang berair\n&#8226; Daun mengering keriput dengan warna hijau keputihan\n&#8226; Cairan bakteri berwarna putih menetes dari daun\n\nGejala awal yang disebabkan adalah berubahnya warna daun dan mengering keriput. Luka pada tepi daun yang berarir muncul pertama kali pada daun. Luka ini akan membentuk luka yang semakin besar apabila dibiarkan. Pada tahap akhir penyakit, cairan bakteri yang berwarna putih layaknya susu akan menetes dari daun, dimana tetesan ini akan meninggalkan kerak putih." />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cardView1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:cardCornerRadius="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@id/cause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cause"
                    android:textStyle="bold"
                    android:textSize="22sp"/>

                <TextView
                    android:id="@+id/causeDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="18sp"
                    tools:text="Penyakit ini disebabkan oleh bakteri Xanthomonas campestris pv. Oryzae yang dapat bertahan hidup di gulma. Bakteri dapat menyerang pada luka daun, dipicu penggunaan pupuk N berlebihan, kurangnya pupuk kalium, dan kelembaban tinggi. Semakin lama penyakit menyerang tanaman, semakin tinggi kerugian panen yang disebabkan. Ketika tanaman padi terinfeksi, sebagian besar bulir padi akan menjadi rusak. Penyakit ini biasanya terjadi di lingkungan beriklim tropis."
                    android:layout_below="@id/cause"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cardView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@id/preventionAndTreatment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prevention_treatment"
                    android:textStyle="bold"
                    android:textSize="22sp"/>

                <TextView
                    android:id="@+id/descriptionPreventionAndTreatment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="18sp"
                    tools:text="&#8226; Gunakan benih yang sehat dan bersertifikat \n&#8226; Menanam varietas yang tahan penyakit"
                    android:layout_below="@id/preventionAndTreatment"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>